--- a/templates/info.html
+++ b/templates/info.html
@@ -53,9 +53,13 @@
 </div>
 <form method="POST" enctype="multipart/form-data">
   <div class="form-row">
-    <div class="form-group col-md-12 col-sm-6">
+   <div class="form-group col-md-6 col-sm-6">
       <label for="inputEmail4">Client name ग्राहकांचे नाव *</label>
       <input type="text" required="" name="cname" class="form-control" id="inputEmail4" placeholder="Client name">
+    </div>
+     <div class="form-group col-md-6 col-sm-6">
+      <label for="inputEmail4">Supervisor name पर्यवेक्षक नाव *</label>
+      <input type="text" required="" name="sname" class="form-control" id="inputEmail4" placeholder="Supervisor name">
     </div>
   </div>
 <div class="form-row">
